@@ -1,10 +1,11 @@
+import java.net.URI;
 import java.net.URL;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 
 public class URLReader {
     public static void main(String[] args) throws Exception {
-        URL url = new URL("https://example.com");
+        URL url = new URI("https://apptechnologies.co").toURL();
         BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()));
         String line;
         while ((line = reader.readLine()) != null) {
